--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 Antik provides a foundation for scientific and engineering computation in Common Lisp.
 
 |---------+---------------------------------------------------------------------------------------------|
-| source  | git:https://gitlab.common-lisp.net/antik/antik/-/archive/QL-2019-02/antik-QL-2019-02.tar.gz |
+| source  | file:https://gitlab.common-lisp.net/antik/antik/-/archive/QL-2019-02/antik-QL-2019-02.tar.gz |
 | version | QL-2019-02                                                                                  |
 | systems | antik foreign-array physical-dimension science-data                                         |
 |---------+---------------------------------------------------------------------------------------------|
