--- a/README.org
+++ b/README.org
@@ -1,9 +1,10 @@
 * antik
 
-Antik provides a foundation for scientific and engineering computation in Common Lisp.
+Antik provides a foundation for scientific and engineering computation
+in Common Lisp.
 
-|---------+----------------------------------------------------------------------------------------------|
-| source  | file:https://gitlab.common-lisp.net/antik/antik/-/archive/QL-2019-02/antik-QL-2019-02.tar.gz |
-| version | QL-2019-02                                                                                   |
-| systems | antik foreign-array physical-dimension science-data                                          |
-|---------+----------------------------------------------------------------------------------------------|
+|---------+----------------------------------------------------------------|
+| source  | git:https://gitlab.common-lisp.net/antik/antik.git             |
+| commit  | df14cb8                                                        |
+| systems | antik antik-base foreign-array physical-dimension science-data |
+|---------+----------------------------------------------------------------|
